sites/all/themes/ukabbalah/sass/style.scss
/* ... */
#block-custom-search-blocks-2 input#edit-submit.form-submit {
    background: transparent url("http://cdn1.kabbalah.com/university/icons/search-mag-glass.svg") no-repeat scroll right center;
    border: medium none;
    color: transparent;
    cursor: pointer;
    float: right;
    height: 28px;
    margin-left: 0;
    position: relative;
    right: 30px;
    top: -58px;
    width: 26px;
}
#edit-basic.container-inline.form-wrapper input#edit-submit.form-submit {
    background: transparent url("http://cdn1.kabbalah.com/university/icons/search-mag-glass.svg") no-repeat scroll right center;
    border: medium none;
    color: transparent;
    cursor: pointer;
    height: 28px;
    margin-left: -33px;
    position: relative;
    top: -4px;
    width: 26px;
}
#search-form > div {
    border-bottom: 1px dashed #b5b5b5;
    // border-top: 1px dashed #b5b5b5;
    // margin-top: 40px;
    padding-bottom: 30px;
}
.spelling-suggestions{
    background: #f1f0f0 none repeat scroll 0 0;
    margin-top: 20px;
    padding: 5px 30px;
    strong {
        color: #433a3a;
        font-family: proxiregular;
        font-size: 18px;
        text-transform: lowercase;
    }
    dt {
        float: left;
        margin-right: 10px;
    }
    dd a {
        color: #208fdc;
        font-size: 18px;
    }
}
.spelling-suggestions + ul{
    border-bottom: 1px dashed #b5b5b5;
    padding-bottom: 20px;
    padding-left: 0;
}
// #searchContentResult .region.region-searchcontentresult {
//     border-bottom: 1px dashed #b5b5b5;
//     padding-bottom: 20px;
// }
#block-apachesolr-search-sort > h2{
    float: left;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 0;
    padding-top: 4px;
    text-transform: uppercase;
}
#block-apachesolr-search-sort {
    border-bottom: 1px dashed #b5b5b5;
    border-top: 1px dashed #b5b5b5;
    float: left;
    margin-bottom: 20px;
    width: 100%;
}
// #block-apachesolr-search-sort{
//     height: 56px;
// }
#block-apachesolr-search-sort ul{
   margin: 0; 
}
#block-apachesolr-search-sort .content{
    float: right;
    margin: 0; 
} 
#block-apachesolr-search-sort li{
    float: left;
    margin: 0; 
}
#block-apachesolr-search-sort li img{
    display: none;
}
#block-apachesolr-search-sort li a {
    color: #433a3a;
    float: left;
    font-size: 17px;
    padding: 10px 13px 13px;
    text-transform: lowercase;
}
#block-apachesolr-search-sort li a.active{
    background: #e7f0f7 none repeat scroll 0 0;
    font-weight: bold;
}
.searchContenTeacher{
    margin-bottom: 5px;
    margin-top: 15px;
}
.searchContenTeacher, .searchContenTeacher a, .searchContenCcourse {
    color: #433a3a;
    font-size: 15px;
    line-height: 18px;   
}
// 
// #searchWrapper input.apachesolr-autocomplete{
//     background: #433a3a url("/sites/all/themes/spukabbalah/images/mag_glass_grey.svg") no-repeat scroll right 10px center;
//     border: 1px solid #a7a2a2;
//     color: #b2b2b2;
//     font-family: proxiregular;
//     font-size: 16px;
//     height: 32px;
//     margin: -6px auto;
//     padding-left: 9px;
//     width: 278px;
// }
#searchWrapper .form-submit{
    background: transparent none repeat scroll 0 0;
    border: medium none !important;
    color: transparent;
    cursor: pointer;
    float: right;
    height: 34px;
    margin-top: -51px !important;
    position: relative;
    right: -20px;
    width: 40px !important;
}
#searchWrapper .form-actions.form-wrapper{
    margin: 0;
}
.ac_results{
    border: 1px solid #f1f0f0 !important;
    width: 288px !important;
}
.ac_results .ac_odd {
    background-color: #f1f0f0 !important;
}
.ac_results .apachesolr_autocomplete {
    color: #433a3a !important;
    font-size: 14px !important;
    strong {
        color: #208fdc !important;
        font-family: proxilight !important;
    }
}
.ac_results .ac_over {
    background-color: #433a3a !important;
    .apachesolr_autocomplete.suggestion,.apachesolr_autocomplete.message {
        color: #a7a2a2 !important;
    }
}
#block-custom-search-blocks-2 input.apachesolr-autocomplete::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color:    #208fdc;
}
#block-custom-search-blocks-2 input.apachesolr-autocomplete:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color:    #208fdc;
   opacity:  1;
}
#block-custom-search-blocks-2 input.apachesolr-autocomplete::-moz-placeholder { /* Mozilla Firefox 19+ */
   color:    #208fdc;
   opacity:  1;
}
#block-custom-search-blocks-2 input.apachesolr-autocomplete:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color:    #208fdc;
}
.not-logged-in.page-user form#user-login-form .item-list ul{
    display: none;
}
.not-logged-in.page-user #login_form > a {
    color: #a33a3a;
    float: left;
    margin-left: 215px;
    margin-top: -86px;
    position: relative;
}
// comments css

.commentingText {
    background: url("http://cdn1.kabbalah.com/university/icons/comment-box.png") no-repeat;
    font-size: 14px;
    height: 64px;
    line-height: 20px;
    margin-bottom: 20px;
    padding: 17px 33px;
}
.commentingText > a {
    color: #007ed3;
}
// test to fix the player size for ios 

#playerbase {
    min-width: 940px;
}
video.jw-video {
    height: 528px !important;
    width: 940px !important;
    transform: none!important;
}

